--- a/secondary.html
+++ b/secondary.html
@@ -99,7 +99,11 @@
         </form>
       </div>
     </div>
-
+    <script>
+      function logoutFunction() {
+        window.location.replace("index.html");
+      }
+    </script>
     <script src="/scripts/secondary.js"></script>
     <script src="/scripts/script.js"></script>
   </body>
